<resources>
    <string name="app_name">Aprendendo Sobre FrieBase</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    --! Home page --
    <string name="edt_email">E-mail</string>
    <string name="edt_password">Senha</string>
    <string name="btn_login">Entrar</string>
    <string name="btn_delete">Cancelar</string>

    --! Home cadastro --
    <string name="edt_name">Nome</string>
    <string name="edt_idade">Idade</string>
    <string name="txt_cadastro">Cadastre-se</string>
    <string name="btn_cadastro">Cadastrar</string>


</resources>