<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/txt_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_cadastro"
        android:textStyle="bold"
        android:gravity="center">
    </TextView>

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_name"
        android:textSize="20sp"
        android:textAlignment="center"
        android:inputType="text">
    </EditText>
    <EditText
        android:id="@+id/edt_idade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_idade"
        android:textSize="20sp"
        android:textAlignment="center"
        android:inputType="text">
    </EditText>

    <Button
        android:id="@+id/btn_login_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/btn_cadastro">
    </Button>

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
    </TextView>

    <TextView
        android:id="@+id/txt_idade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
    </TextView>

</LinearLayout>